--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
+  search_page: ^2.3.0
+  shared_preferences: ^2.5.1
 
 dev_dependencies:
   flutter_test:
