--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.20.2
   search_page: ^2.3.0
   shared_preferences: ^2.5.1
+  info_widget: ^1.0.0
 
 dev_dependencies:
   flutter_test:
