--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,7 +15,9 @@ jobs:
           channel: 'stable'
           architecture: x64
       - run: flutter pub get
-      
+
+      - name: set ios version
+      - run: sed -i "s/platform :ios, '.*'/platform :ios, '13.0'/g" ios/Runner/Podfile
 
       - run: pod repo update
         working-directory: ios
