--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,7 +17,8 @@ jobs:
       - run: flutter pub get
 
       - name: set ios version
-      - run: sed -i "s/platform :ios, '.*'/platform :ios, '13.0'/g" ios/Runner/Podfile
+      - run: |
+          sed -i "s/platform :ios, '.*'/platform :ios, '13.0'/g" ios/Runner/Podfile
 
       - run: pod repo update
         working-directory: ios
