--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,6 +19,9 @@ jobs:
       - run: pod repo update
         working-directory: ios
 
+      - run: sed -i "platform :ios, '13.0'" Podfile
+        working-directory: ios
+
       - run: flutter build ios --release --no-codesign --no-tree-shake-icons
 
       - run: mkdir Payload
